# pb/server_simple_bank.pb.go
@@ -26,34 +26,39 @@ var File_server_simple_bank_proto protoreflect.FileDescriptor
 
 const file_server_simple_bank_proto_rawDesc = "" +
 	"\n" +
-	"\x18server_simple_bank.proto\x12\x02pb\x1a\x15rpc_create_user.proto\x1a\x14rpc_login_user.proto\x1a\x15rpc_update_user.proto\x1a\x1cgoogle/api/annotations.proto\x1a.protoc-gen-openapiv2/options/annotations.proto2\xfb\x02\n" +
+	"\x18server_simple_bank.proto\x12\x02pb\x1a\x15rpc_create_user.proto\x1a\x14rpc_login_user.proto\x1a\x15rpc_update_user.proto\x1a\x16rpc_verify_email.proto\x1a\x1cgoogle/api/annotations.proto\x1a.protoc-gen-openapiv2/options/annotations.proto2\x8f\x04\n" +
 	"\n" +
 	"SimpleBank\x12\x8e\x01\n" +
 	"\n" +
 	"CreateUser\x12\x15.pb.CreateUserRequest\x1a\x16.pb.CreateUserResponse\"Q\x92A4\x12\x0fCreate new user\x1a!Use this API to create a new user\x82\xd3\xe4\x93\x02\x14:\x01*\"\x0f/v1/create_user\x12\x86\x01\n" +
 	"\n" +
 	"UpdateUser\x12\x15.pb.UpdateUserRequest\x1a\x16.pb.UpdateUserResponse\"I\x92A,\x12\vUpdate user\x1a\x1dUse this API to update a user\x82\xd3\xe4\x93\x02\x14:\x01*\"\x0f/v1/update_user\x12S\n" +
-	"\tLoginUser\x12\x14.pb.LoginUserRequest\x1a\x15.pb.LoginUserResponse\"\x19\x82\xd3\xe4\x93\x02\x13:\x01*\"\x0e/v1/login_userB\x7f\x92Aa\x12_\n" +
+	"\tLoginUser\x12\x14.pb.LoginUserRequest\x1a\x15.pb.LoginUserResponse\"\x19\x82\xd3\xe4\x93\x02\x13:\x01*\"\x0e/v1/login_user\x12\x91\x01\n" +
+	"\vVerifyEmail\x12\x16.pb.VerifyEmailRequest\x1a\x17.pb.VerifyEmailResponse\"Q\x92A6\x12\x11verify user email\x1a!Use this API to verify user email\x82\xd3\xe4\x93\x02\x12\x12\x10/v1/verify_emailB\x7f\x92Aa\x12_\n" +
 	"\x0fSimple Bank API\"G\n" +
 	"\vTech School\x12\x1dhttps://github.com/techschool\x1a\x19techschool.guru@gmail.com2\x031.2Z\x19pxsemic.com/simplebank/pbb\x06proto3"
 
 var file_server_simple_bank_proto_goTypes = []any{
-	(*CreateUserRequest)(nil),  // 0: pb.CreateUserRequest
-	(*UpdateUserRequest)(nil),  // 1: pb.UpdateUserRequest
-	(*LoginUserRequest)(nil),   // 2: pb.LoginUserRequest
-	(*CreateUserResponse)(nil), // 3: pb.CreateUserResponse
-	(*UpdateUserResponse)(nil), // 4: pb.UpdateUserResponse
-	(*LoginUserResponse)(nil),  // 5: pb.LoginUserResponse
+	(*CreateUserRequest)(nil),   // 0: pb.CreateUserRequest
+	(*UpdateUserRequest)(nil),   // 1: pb.UpdateUserRequest
+	(*LoginUserRequest)(nil),    // 2: pb.LoginUserRequest
+	(*VerifyEmailRequest)(nil),  // 3: pb.VerifyEmailRequest
+	(*CreateUserResponse)(nil),  // 4: pb.CreateUserResponse
+	(*UpdateUserResponse)(nil),  // 5: pb.UpdateUserResponse
+	(*LoginUserResponse)(nil),   // 6: pb.LoginUserResponse
+	(*VerifyEmailResponse)(nil), // 7: pb.VerifyEmailResponse
 }
 var file_server_simple_bank_proto_depIdxs = []int32{
 	0, // 0: pb.SimpleBank.CreateUser:input_type -> pb.CreateUserRequest
 	1, // 1: pb.SimpleBank.UpdateUser:input_type -> pb.UpdateUserRequest
 	2, // 2: pb.SimpleBank.LoginUser:input_type -> pb.LoginUserRequest
-	3, // 3: pb.SimpleBank.CreateUser:output_type -> pb.CreateUserResponse
-	4, // 4: pb.SimpleBank.UpdateUser:output_type -> pb.UpdateUserResponse
-	5, // 5: pb.SimpleBank.LoginUser:output_type -> pb.LoginUserResponse
-	3, // [3:6] is the sub-list for method output_type
-	0, // [0:3] is the sub-list for method input_type
+	3, // 3: pb.SimpleBank.VerifyEmail:input_type -> pb.VerifyEmailRequest
+	4, // 4: pb.SimpleBank.CreateUser:output_type -> pb.CreateUserResponse
+	5, // 5: pb.SimpleBank.UpdateUser:output_type -> pb.UpdateUserResponse
+	6, // 6: pb.SimpleBank.LoginUser:output_type -> pb.LoginUserResponse
+	7, // 7: pb.SimpleBank.VerifyEmail:output_type -> pb.VerifyEmailResponse
+	4, // [4:8] is the sub-list for method output_type
+	0, // [0:4] is the sub-list for method input_type
 	0, // [0:0] is the sub-list for extension type_name
 	0, // [0:0] is the sub-list for extension extendee
 	0, // [0:0] is the sub-list for field type_name
@@ -67,6 +72,7 @@ func file_server_simple_bank_proto_init() {
 	file_rpc_create_user_proto_init()
 	file_rpc_login_user_proto_init()
 	file_rpc_update_user_proto_init()
+	file_rpc_verify_email_proto_init()
 	type x struct{}
 	out := protoimpl.TypeBuilder{
 		File: protoimpl.DescBuilder{
